--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <title>Task Manager</title>
   </head>
   <body>
+    <div id="auth"></div>
     <form class="task-form">
       <h4>task manager</h4>
       <div class="form-control">
