styling for responsiveness

--- a/public/register.html
+++ b/public/register.html
@@ -50,7 +50,7 @@
         </p>
       </form>
       <div id="create-account-wrap">
-        <p></p>
+        <p>Already a member? <a href="./login.html">Login</a></p>
       </div>
       <!-- axios -->
       <script
