--- a/public/task.html
+++ b/public/task.html
@@ -29,7 +29,7 @@
           <label for="completed">completed</label>
           <input type="checkbox" name="completed" class="task-edit-completed" />
         </div>
-        <button type="submit" class="block btn task-edit-btn">edit</button>
+        <button type="submit" class="block btn task-edit-btn">save</button>
         <div class="form-alert"></div>
       </form>
       <a href="index.html" class="btn back-link">back to tasks</a>
