--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
           class="task-input"
           placeholder="e.g. wash dishes"
         />
-        <button type="submit" class="btn submit-btn">submit</button>
+        <button type="submit" class="btn submit-btn">Add</button>
       </div>
       <div class="form-alert"></div>
     </form>
